descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2013-0X-XX  Release 7.24.2                                     ---
----------------------------------------------------------------------

* fix z-clipping bug in MGED's X display manager - Cliff Yapp
* added -depth option to MGED 'search' command - Cliff Yapp
* improved 'search' with 'flat' search path modifier - Cliff Yapp
* improved 'search' with above/equal/below depth limits - Cliff Yapp
* added attribute sorting option to the 'attr' command - Tom Browder
* changed 'bwfilter' tool offset option from -o to -O - Mohit Daga
* gattributes section 5 man page renamed to attributes - Tom Browder
* changed 'benchmark' defaults: 2% deviation, 5 frames - Sean Morrison
* improved bwrect to handle redirected input and output - Mohit Daga
* fixed TIE mesh raytrace crashes on 32-bit platforms - Sean Morrison
* fixed pixscale and bwscale to not output ioctl error - Mohit Daga
* fixed adrt/TIE polygonal mesh memory management bug - Richard Weiss
* fixed fast4-g importer parsing of blank input lines - Richard Weiss
* added -o flag to 'bb' command for oriented bounding box - Cliff Yapp
* allow search to see hidden combs with the -a flag - Cliff Yapp
* added comb -l lift option to change region designation - Cliff Yapp
* print current grid information in gqa output - Cliff Yapp
* added -f option for flattening combs to 'comb' command - Cliff Yapp
* added support for boolean op filtering in search - Cliff Yapp
* added new g-raw geometry converter - Jon Engbert, Daniel Roßberg
* improved g-stl usage and documentation - Jon Engbert
* added -c and -r region flag options to the comb command - Cliff Yapp
* added -p/-P point/line plot options to 'burst' tool - Sean Morrison
* added -w wrapping option to the 'comb' command - Cliff Yapp